dataset1235/2025-2/2318198438/users/1018361269/executions/1897677159_704983377.log
== RUN (2025-08-21 00:56:17)
-- CODE: 
x = int(input("digite o dividendo:"))
y = int(input("digite o divisor:"))

q= x//y
r= x%y
dr = x/y
pr =x*y
po= y**3

print(q)
print(r)
print(dr)
print(pr)
print(po)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:55:30)
-- CODE: 
x = int(input("digite o dividendo:"))
y = int(imput("digite o divisor:"))

q= x//y
r= x%y
dr= x/y
pr=x*y
po= y**3

print(q)
print(r)
print(dr)
print(pr)
print(po)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = int(imput("digite o divisor:"))
            ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:56:58)
-- CODE: 
x = int(input("digite o dividendo:"))
y = int(input("digite o divisor:"))

q= x//y
r= x%y
dr = x/y
pr =x*y
po= y**3

print(q)
print(r)
print(dr)
print(pr)
print(po)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
